--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,11 @@ yarn-error.log*
 #json files from 3rd party api
 sporticus/json-data/*.json
 
+# sqlite
+*.sqlite3
+
 # vscode
 .vscode/
+
+# virtual environment
+venv/
