--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ag-grid-community": "^27.3.0",
     "ag-grid-react": "^27.3.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-dropdown-now": "^6.0.1",
